@@ -1,3 +1,5 @@
+2015-02-15 [1.2.1]
+  * Provizorne doplnenie vyzadovaneho hesla pri pristupe k Stream API
 2014-12-12
   * Predelani pluginu, na vyuzivani Stream API
 2014-10-31
